Closed
Bug 1301579
Opened 9 years ago
Closed 9 years ago
Add assertion in D2D1 backend while handling A8 format in DrawSurface
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: ethlin, Assigned: ethlin)
Details
Attachments
(1 file)
|
1.52 KB,
patch
|
mstange
:
review+
|
Details | Diff | Splinter Review |
Per Bug 1275478 comment 8, we should add assertion so others don't have to discover the behaviour difference themselves.
| Assignee | ||
Comment 1•9 years ago
|
||
Add assertion to prevent the usage of DrawTargetD2D1::DrawSurface with A8 format.
Attachment #8789659 -
Flags: review?(mstange)
Comment 2•9 years ago
|
||
Comment on attachment 8789659 [details] [diff] [review]
add assertion
Review of attachment 8789659 [details] [diff] [review]:
-----------------------------------------------------------------
Oops, somehow I missed this review request.
Attachment #8789659 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 3•9 years ago
|
||
try result looks goods:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=841f7714421f
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/07276d294e17
Add assertion to prevent the use of DrawTargetD2D1::DrawSurface with A8 format. r=mstange
Keywords: checkin-needed
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•