Bug 1301579 - Add assertion to prevent the use of DrawTargetD2D1::DrawSurface with A8 format. r=mstange